# code-weekend-1

./: .env.example  .gitignore  CMakeLists.txt  README.md  conan-install.sh  conanfile.txt  index.html  requirements.txt
.github/workflows/: build.yml
assets/: CanvasPool-B8MMqbGH.js  SharedSystems-DhUXitBu.js  WebGLRenderer-CL0OP8eQ.js  WebGPURenderer-Bt2F74ww.js  browserAll-TurjHWsO.js  colorToUniform-BgZhMnHo.js  getBatchSamplersUniformGroup-CaHLGttu.js  index-BDQUKjjM.css  index-BncP8gNB.js  webworkerAll-StMZK_Tw.js
data/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  022.json  023.json  024.json  025.json  026.json  027.json  028.json  029.json  030.json  031.json  032.json  033.json  034.json  035.json  036.json  037.json  038.json  039.json  040.json  (+10 more)
gui/: README.md  index.html  package.json  pnpm-lock.yaml
gui/src/: context.ts  main.ts  styles.css
gui/src/components/: canvas.ts  files.ts  filter.ts  shortcuts.ts  submit.ts  summaries.ts
gui/src/core/: solution.ts  test.ts
notebooks/: scores.ipynb  tests.ipynb
src/cw1/: config.h  grid-search.h  program.h  solution.h  test.h
src/cw1/solvers/: basic.cpp
